--- a/styles/Shop.module.css
+++ b/styles/Shop.module.css
@@ -106,7 +106,7 @@
   height: 100%;
   position: absolute;
 
-  z-index: 9;
+  z-index: 3;
 }
 
 .twinPicContainer:hover {
